--- a/SWF_2340-15_8.1/SWF_2340-15_8.1/SWF_2340-15_8.1.WindowsPhone/MainMenu.xaml
+++ b/SWF_2340-15_8.1/SWF_2340-15_8.1/SWF_2340-15_8.1.WindowsPhone/MainMenu.xaml
@@ -1,36 +1,51 @@
 ﻿<Page
-    x:Class="SWF_2340_15_8._1.MainMenu"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SWF_2340_15_8._1"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:SampleData="using:Blend.SampleData.Database"
+    x:Class="SWF_2340_15_8._1.MainMenu"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Mode=Self}}"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" d:DataContext="{d:DesignData /SampleData/Database/Database.xaml}">
     <Page.BottomAppBar>
         <CommandBar>
             <AppBarButton x:Name="AddFriend" Icon="AddFriend" Label="Add Friend" Click="AddFriend_Click"/>
-            <AppBarButton x:Name="AddReq" Label="New Request" Click="AddReq_Click" >
-                <AppBarButton.Icon>
-                    <SymbolIcon Symbol="Add"/>
-                </AppBarButton.Icon>
-            </AppBarButton>
+            <AppBarButton x:Name="AddReq" Label="New Request" Click="AddReq_Click" Icon="Add" />
             <AppBarButton x:Name="logout" Icon="Cancel" Label="Logout" Click="logout_Click"/>
         </CommandBar>
     </Page.BottomAppBar>
-    <Grid x:Name="LayoutRoot">
+	<Grid x:Name="LayoutRoot">
 
         <!--TODO: Content should be placed within the following grid-->
-        <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
-            <Pivot Title="Shopping With Friends" Margin="0,1,0,-1">
-                <PivotItem Header="Reports">
-                    <Grid/>
-                </PivotItem>
-                <PivotItem Header="Friends">
-                    <ListView Margin="-0.33331298828125,0,0,-0.16668701171875"/>
-                </PivotItem>
-            </Pivot>
+		<Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
+			<Pivot Title="Shopping With Friends" Margin="0,1,0,-1">
+				<PivotItem Header="Reports">
+					<Grid/>
+				</PivotItem>
+				<PivotItem Header="Requests">
+					<Grid/>
+				</PivotItem>
+				<PivotItem Header="Friends">
+					<ListView 
+						AutomationProperties.AutomationId="ItemListViewSection4"
+						AutomationProperties.Name="Items In Group"
+						SelectionMode="Single"
+						IsItemClickEnabled="True"
+						ContinuumNavigationTransitionInfo.ExitElementContainer="True">
+						<ListView.ItemTemplate>
+							<DataTemplate>
+								<StackPanel Margin="0,0,0,19">
+									<TextBlock Text="{Binding Property1}" Style="{ThemeResource ListViewItemTextBlockStyle}"/>
+									<TextBlock Text="{Binding Property2}" Style="{ThemeResource ListViewItemSubheaderTextBlockStyle}"/>
+								</StackPanel>
+							</DataTemplate>
+						</ListView.ItemTemplate>
+					</ListView>
+				</PivotItem>
+			</Pivot>
 
-        </Grid>
-    </Grid>
+		</Grid>
+	</Grid>
 </Page>
