--- a/SWF_2340-15_8.1/SWF_2340-15_8.1/SWF_2340-15_8.1.WindowsPhone/MainMenu.xaml
+++ b/SWF_2340-15_8.1/SWF_2340-15_8.1/SWF_2340-15_8.1.WindowsPhone/MainMenu.xaml
@@ -12,7 +12,8 @@
     <Page.BottomAppBar>
         <CommandBar>
             <AppBarButton x:Name="AddFriend" Icon="AddFriend" Label="Add Friend" Click="AddFriend_Click"/>
-            <AppBarButton x:Name="AddReq" Label="New Request" Click="AddReq_Click" Icon="Add" />
+            <AppBarButton x:Name="AddReq" Label="New Request" Click="AddReq_Click" Icon="Add" FontSize="12" />
+            <AppBarButton x:Name="AddRep" Icon="Add" Label="New Report" Click="AddRep_Click"/>
             <AppBarButton x:Name="logout" Icon="Cancel" Label="Logout" Click="logout_Click"/>
         </CommandBar>
     </Page.BottomAppBar>
@@ -20,12 +21,48 @@
 
         <!--TODO: Content should be placed within the following grid-->
 		<Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
-			<Pivot Title="Shopping With Friends" Margin="0,1,0,-1">
+			<Pivot x:Name="Navigation" Title="Shopping With Friends" Margin="0,1,0,-1" SelectionChanged="Navigation_SelectionChanged">
 				<PivotItem Header="Reports">
-					<Grid/>
+                    <Grid>
+                        <ListView
+                            x:Name="RepLst"
+                            SelectionMode="Single"
+                            IsItemClickEnabled="True"
+                            ItemsSource="{Binding}">
+                            <ListView.Resources>
+                                <DataTemplate x:Key="Report">
+                                    <StackPanel Margin="0,0,0,19">
+                                        <TextBlock Text="{Binding item}" Style="{ThemeResource ListViewItemTextBlockStyle}"/>
+                                        <TextBlock Text="{Binding price}" Style="{ThemeResource ListViewItemSubheaderTextBlockStyle}"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListView.Resources>
+                            <ListView.ItemTemplate>
+                                <StaticResource ResourceKey="Report" />
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </Grid>
 				</PivotItem>
 				<PivotItem Header="Requests">
-					<Grid/>
+                    <Grid>
+                        <ListView
+                            x:Name="ReqLst"
+                            SelectionMode="Single"
+                            IsItemClickEnabled="True"
+                            ItemsSource="{Binding}">
+                            <ListView.Resources>
+                                <DataTemplate x:Key="Request">
+                                    <StackPanel Margin="0,0,0,19">
+                                        <TextBlock Text="{Binding item}" Style="{ThemeResource ListViewItemTextBlockStyle}"/>
+                                        <TextBlock Text="{Binding maxPrice}" Style="{ThemeResource ListViewItemSubheaderTextBlockStyle}"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListView.Resources>
+                            <ListView.ItemTemplate>
+                                <StaticResource ResourceKey="Request" />
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </Grid>
 				</PivotItem>
 				<PivotItem Header="Friends">
                     <ListView 
