--- a/SWF_2340-15_8.1/SWF_2340-15_8.1/SWF_2340-15_8.1.WindowsPhone/NewReport.xaml
+++ b/SWF_2340-15_8.1/SWF_2340-15_8.1/SWF_2340-15_8.1.WindowsPhone/NewReport.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="SWF_2340_15_8._1.NewRequest"
+    x:Class="SWF_2340_15_8._1.NewReport"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SWF_2340_15_8._1"
@@ -9,7 +9,7 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
     <Page.BottomAppBar>
         <CommandBar>
-            <AppBarButton x:Name="AddReq" Icon="Add" Label="Add" Click="AddReq_Click"/>
+            <AppBarButton x:Name="AddRep" Icon="Add" Label="Add" Click="AddRep_Click"/>
         </CommandBar>
     </Page.BottomAppBar>
 
@@ -29,15 +29,21 @@
         <!-- Title Panel -->
         <StackPanel Grid.Row="0" Margin="19,0,0,0">
             <TextBlock Text="Shopping With Friends" Style="{ThemeResource TitleTextBlockStyle}" Margin="0,12,0,0"/>
-            <TextBlock Text="New Request" Margin="0,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}"/>
+            <TextBlock Text="New Report" Margin="0,-6.5,0,26.5" Style="{ThemeResource HeaderTextBlockStyle}" CharacterSpacing="{ThemeResource PivotHeaderItemCharacterSpacing}"/>
         </StackPanel>
 
         <!--TODO: Content should be placed within the following grid-->
         <Grid Grid.Row="1" x:Name="ContentRoot" Margin="19,9.5,19,0">
-            <TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Item Name" VerticalAlignment="Top" Margin="10,10,0,0"/>
-            <TextBlock HorizontalAlignment="Left" Margin="10,72,0,0" TextWrapping="Wrap" Text="Item Price" VerticalAlignment="Top" />
+            <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Item Name" VerticalAlignment="Top"/>
+            <TextBlock HorizontalAlignment="Left" Margin="10,72,0,0" TextWrapping="Wrap" Text="Item Price" VerticalAlignment="Top"/>
+            <TextBlock HorizontalAlignment="Left" Margin="10,134,0,0" TextWrapping="Wrap" VerticalAlignment="Top">
+            	<Run Text="Location"/>
+            	<LineBreak/>
+            	<Run/>
+            </TextBlock>
             <TextBox x:Name="ItemName" HorizontalAlignment="Left" Margin="10,28,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="342"/>
-            <TextBox x:Name="ItemPrice" HorizontalAlignment="Left" Margin="10,90,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="342"/>
+            <TextBox x:Name="ItemPrice" HorizontalAlignment="Left" Margin="10,90,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="342" InputScope="Number"/>
+            <TextBox x:Name="ItemLoc" HorizontalAlignment="Left" Margin="10,151,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="342"/>
 
         </Grid>
     </Grid>
